--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,18 @@
+server:
+  port: ${PORT:8080}
+
 spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: erick.founders@gmail.com
-    password: wgzpczwwngodvusg
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
